Removed useless stuff